Add mockserver test